Fixed overflow-x bug

--- a/client/styles.css
+++ b/client/styles.css
@@ -60,11 +60,13 @@ body {
 #qPanelBody {
   margin-top: auto;
   overflow: auto;
+  overflow-x: hidden;
   position: relative;
   height: 278px;
 }
 #qTextBody {
   overflow: auto;
+  overflow-x: hidden;
   max-height: 100%;
   width: 660px;
   position: absolute;
@@ -72,8 +74,8 @@ body {
 }
 #qEntry {
   max-width: 640px;
-  border-top-style: solid;
-  border-top-width: 2px;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
 }
 #vidInQ {
   max-width: 450px;
